# vaultone

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.dev.txt
src/ui/: interface_app.py
tests/: conftest.py
tests/test_configs/: test_default_config.py  test_development_config.py  test_logger_config.py  test_production_config.py  test_testing_config.py
tests/test_constants/: test_messages.py  test_paths.py
tests/test_models/: test_audio_model.py
tests/test_ui/: test_interface_app.py  test_styles.py
tests/test_ui/test_components/: test_record_controls.py
tests/test_ui/test_views/: test_main_view.py
tests/test_utils/: test_dialogs.py  test_error_handler.py  test_helpers.py
